--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# Object file
-*.o
-
-# Ada Library Information
-*.ali
+<! Doctype htmal>
+<html>
+<Body>
+<Button>53774666</button>
+</Body>
+</html>
